--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>de.fr3qu3ncy</groupId>
         <artifactId>easytools</artifactId>
+        <groupId>de.fr3qu3ncy</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>easytools-bungee</artifactId>
+    <artifactId>easytools-spigot</artifactId>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
@@ -26,6 +26,14 @@
         </resources>
     </build>
 
+    <repositories>
+        <!-- Jitpack -->
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>de.fr3qu3ncy</groupId>
@@ -33,20 +41,27 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>net.md-5</groupId>
-            <artifactId>bungeecord-api</artifactId>
-            <version>1.19-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>co.aikar</groupId>
-            <artifactId>acf-bungee</artifactId>
+            <artifactId>acf-paper</artifactId>
             <version>0.5.1-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot</artifactId>
+            <version>1.19.4-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>de.fr3qu3ncy</groupId>
-            <artifactId>easyconfig-bungee</artifactId>
+            <artifactId>easyconfig-spigot</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- DecentHolograms -->
+        <dependency>
+            <groupId>com.github.decentsoftware-eu</groupId>
+            <artifactId>decentholograms</artifactId>
+            <version>2.8.2</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
